Fix Removing excess styles & Aligning a form vertically
Additional modernization required

--- a/web/skins/classic/css/base/views/groups.css
+++ b/web/skins/classic/css/base/views/groups.css
@@ -5,6 +5,10 @@
 #contentTable .colSelect input {
 }
 #content form {
-  height: 100%;
-  overflow: auto;
+/*  height: 100%;
+  overflow: auto; */
+}
+
+form {
+    padding-top: 2rem;
 }
